opam-version: "2.0"
name: "learn-ocaml-client"
version: "0.13.2"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: [
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
  "Yann Régis-Gianas <yann.regis-gianas@nomadic-labs.com>"
]
license: "MIT"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
dev-repo: "git+https://github.com/ocaml-sf/learn-ocaml"
depends: [
  "asak"
  "base64"
  "base" {>= "v0.9.4"}
  "cmdliner"
  "cohttp" {>= "2.0.0"}
  "cohttp-lwt-unix" {>= "2.0.0"}
  "cstruct" {>= "3.3.0"}
  "digestif" {>= "0.7.1"}
  "dune" {>= "2.3.0"}
  "ezjsonm"
  "gg"
  "ipaddr" {= "2.8.0" }
  "lwt" {>= "4.0.0"}
  "lwt_ssl"
  "ocaml" {(>= "4.12") & (< "4.13~")}
  "ocamlfind" {build}
  "ocp-indent-nlfork"
  "ocplib-json-typed" {>= "0.7"}
  "ocp-ocamlres" {>= "0.4"}
  "omd" {<= "1.3.1"}
  "ppx_fields_conv"
  "ppxlib"
  "ppx_sexp_conv"
  "ppx_tools"
  "ssl" {= "0.5.10"}
  "vg"
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
synopsis: "The learn-ocaml client"
description: """
This contains the binaries to interact with the learn-ocaml
platform from the command line.
"""
