opam-version: "2.0"
name: "learn-ocaml-client"
version: "1.1.0"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: [
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
  "Yann Régis-Gianas <yann.regis-gianas@nomadic-labs.com>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
]
license: "MIT"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
dev-repo: "git+https://github.com/ocaml-sf/learn-ocaml"
depends: [
  "base64"
  "base" {>= "v0.9.4"}
  "cmdliner" {>= "1.1.0"}
  "cohttp" {>= "2.0.0"}
  "cohttp-lwt-unix" {>= "2.0.0"}
  "cstruct" {>= "3.3.0"}
  "digestif" {>= "0.7.1"}
  "dune" {>= "2.3.0"}
  "ezjsonm"
  "gg"
  "ipaddr" {>= "2.9.0" }
  "lwt" {>= "4.0.0"}
  "lwt_ssl"
  "ocaml" {(>= "5.1") & (< "5.2~")}
  "ocamlfind" {build}
  "ocp-indent-nlfork"
  "json-data-encoding" {>= "0.7"}
  "ocp-ocamlres" {>= "0.4"}
  "omd" {<= "2.0"}
  "ppxlib"
  "ppx_expect"
  "ppx_inline_test"
  "ppx_fields_conv"
  "ppx_sexp_conv"
  "ssl" {>= "0.5.12"}
  "vg"
  "asak" {>= "0.5"}
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
synopsis: "The learn-ocaml client"
description: """
This contains the binaries to interact with the learn-ocaml
platform from the command line.
"""
pin-depends: [
   [
     "asak.0.5"
     "git+https://github.com/AltGr/asak#ocaml5"
   ]
]
