opam-version: "2.0"
name: "learn-ocaml"
version: "0.9"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: "Louis Gesbert"
license: "AGPLv3"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
depends: [
  "base" {= "v0.9.4"}
  "base64"
  "cmdliner"
  "cohttp" {>= "1.0.0"}
  "cohttp-lwt-unix" {>= "1.0.0"}
  "conf-git"
  "decompress" {= "0.8.1"}
  "dune" {build & = "1.1.1"}
  "easy-format" {>= "1.3.0" }
  "ipaddr" {= "2.8.0" }
  "ezjsonm"
  "js_of_ocaml" {>= "3.1.0" & < "3.3"}
  "js_of_ocaml-compiler"
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "js_of_ocaml-toplevel"
  "js_of_ocaml-tyxml"
  "lwt" {>= "3.2.0" & < "4.0.0"}
  "lwt_react"
  "lwt_ssl"
  "magic-mime"
  "markup"
  "ocaml" {>= "4.05.0"}
  "ocamlfind" {build}
  "ocp-indent-nlfork"
  "ocp-ocamlres" {= "0.4"}
  "ocplib-json-typed" {= "0.6"}
  "odoc" {build & = "1.3.0"}
  "omd"
  "pprint"
  "ppx_cstruct"
  "ppx_tools"
  "uutf" {>= "1.0" }
  "yojson" {>= "1.4.0" }
]
build: [
  [make "static"]
  ["dune" "build" "-p" name]
]
install: [
  ["mkdir" "-p" "%{_:share}%"]
  ["cp" "-r" "demo-repository" "%{_:share}%/repository"]
]
synopsis: "The learn-ocaml online platform (engine)"
description: """
This contains the binaries forming the engine for the learn-ocaml platform, and
the common files. A demo exercise repository is also provided as example.
"""
pin-depends: [
  [
    "js_of_ocaml.3.2.0"
    "git+https://github.com/AltGr/js_of_ocaml.git#fix-oc-utf8"
  ]
]
