opam-version: "2.0"
name: "learn-ocaml"
version: "0.12"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: "Yann Régis-Gianas"
license: "MIT"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
dev-repo: "git+https://github.com/ocaml-sf/learn-ocaml"
depends: [
  "base" {>= "v0.9.4"}
  "base64"
  "cmdliner"
  "cohttp" {>= "1.0.0" & < "2.0.0"}
  "cohttp-lwt" {>= "1.0.0" & < "2.0.0"}
  "cohttp-lwt-unix" {>= "1.0.0" & < "2.0.0"}
  "conf-git"
  "cryptokit"
  "decompress" {= "0.8.1"}
  "digestif" {>= "0.7.1"}
  "dune" {= "2.0.1"}
  "easy-format" {>= "1.3.0" }
  "ipaddr" {= "2.8.0" }
  "ezjsonm"
  "js_of_ocaml" {>= "3.3.0"}
  "js_of_ocaml-compiler" {>= "3.3.0"}
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "js_of_ocaml-toplevel"
  "js_of_ocaml-tyxml"
  "lwt" {>= "4.0.0"}
  "lwt_react"
  "lwt_ssl"
  "ssl" {= "0.5.5"}
  "magic-mime"
  "markup"
  "markup-lwt"
  "ocaml" {= "4.05.0"}
  "ocamlnet" {> "4.1"}
  "ocamlfind" {build}
  "ocp-indent-nlfork"
  "ocp-ocamlres" {>= "0.4"}
  "ocplib-json-typed" {= "0.6"}
  "odoc" {build & >= "1.3.0"}
  "omd"
  "pprint"
  "ppx_cstruct"
  "ppx_tools"
  "safepass"
  "uutf" {>= "1.0" }
  "asak" {>= "0.1"}
]
build: [
  [make "static"]
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["mkdir" "-p" "%{_:share}%"]
  ["cp" "-r" "demo-repository" "%{_:share}%/repository"]
]
synopsis: "The learn-ocaml online platform (engine)"
description: """
This contains the binaries forming the engine for the learn-ocaml platform, and
the common files. A demo exercise repository is also provided as example.
"""
