opam-version: "2.0"
name: "learn-ocaml"
version: "1.1.0"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: [
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
  "Yann Régis-Gianas <yann.regis-gianas@nomadic-labs.com>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
]
license: "MIT"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
dev-repo: "git+https://github.com/ocaml-sf/learn-ocaml"
depexts: [
  ["lsof"] {os-distribution = "alpine"}
]
depends: [
  "base64"
  "base" {>= "v0.9.4"}
  "cmdliner" {>= "1.1.0"}
  "cohttp" {>= "2.0.0"}
  "cohttp-lwt" {>= "2.0.0"}
  "cohttp-lwt-unix" {>= "2.0.0"}
  "conf-git"
  "decompress" {= "0.8.1"}
  "digestif" {>= "1.2.0"}
  "dune" {>= "2.3.0"}
  "easy-format" {>= "1.3.0" }
  "ezjsonm"
  "ipaddr" {>= "2.9.0" }
  "js_of_ocaml" {>= "5.0.0"}
  "js_of_ocaml-compiler" {>= "5.0.0"}
  "js_of_ocaml-lwt"
  "js_of_ocaml-ppx"
  "js_of_ocaml-toplevel"
  "js_of_ocaml-tyxml"
  "lwt" {>= "4.0.0"}
  "lwt_react"
  "lwt_ssl"
  "magic-mime"
  "markup"
  "markup-lwt"
  "ocaml" {(>= "5.1") & (< "5.2~")}
  "ocamlfind" {build}
  "ocp-indent-nlfork" {>= "1.5.5"}
  "json-data-encoding" {>= "0.7"}
  "json-data-encoding-browser" {>= "0.7"}
  "ocp-ocamlres" {>= "0.4"}
  "odoc" {build}
  "omd" {< "2.0"}
  "pprint"
  "ppxlib"
  "ppx_cstruct"
  "ppx_expect"
  "ppx_inline_test"
  "ppx_sexp_conv"
  "re"
  "ssl" {>= "0.5.12"}
  "uutf" {>= "1.0" }
  "vg"
  "yojson" {>= "1.4.0" }
  "asak" {= "0.5"}
]
build: [
  [make "static"]
  ["dune" "build" "-p" name "-j" jobs]
  [make "detect-libs"] {with-test}
]
run-test: [make "test"]
install: [
  ["mkdir" "-p" "%{_:share}%"]
  ["cp" "-r" "demo-repository" "%{_:share}%/repository"]
]
synopsis: "The learn-ocaml online platform (engine)"
description: """
This contains the binaries forming the engine for the learn-ocaml platform, and
the common files. A demo exercise repository is also provided as example.
"""
pin-depends: [
   [
     "ocp-indent-nlfork.1.5.5"
     "git+https://git@github.com/OCamlPro/ocp-indent.git#nlfork"
   ]
   [
     "asak.0.5"
     "git+https://github.com/AltGr/asak#ocaml5"
   ]
]
