opam-version: "2.0"
name: "tryocaml"
version: "0.10"
authors: [
  "Benjamin Canou (OCamlPro)"
  "Çağdaş Bozman (OCamlPro)"
  "Grégoire Henry (OCamlPro)"
  "Louis Gesbert (OCamlPro)"
  "Pierrick Couderc (OCamlPro)"
]
maintainer: "Louis Gesbert"
license: "MIT"
homepage: "https://github.com/ocaml-sf/learn-ocaml"
bug-reports: "https://github.com/ocaml-sf/learn-ocaml/issues"
dev-repo: "git+https://github.com/ocaml-sf/learn-ocaml"
depends: [
   "base" {>= "v0.9.4"}
   "base64"
   "cmdliner"
   "dune" {build & >= "1.1.1"}
   "easy-format" {>= "1.3.0" }
   "ezjsonm"
   "js_of_ocaml" {>= "3.3.0"}
   "js_of_ocaml-compiler"
   "js_of_ocaml-lwt"
   "js_of_ocaml-ppx"
   "js_of_ocaml-tyxml"
   "lwt" {>= "3.2.0"}
   "ocaml" {>= "4.05.0"}
   "ocamlfind" {build}
   "ocp-indent-nlfork"
   "ocp-ocamlres" {= "0.4"}
   "ocplib-json-typed" {>= "0.6"}
   "ocplib-json-typed-browser" {>= "0.6"}
   "omd"
   "pprint"
   "ppx_tools"
   "uutf" {>= "1.0" }
   "yojson" {>= "1.4.0" }
]
build: [
  [make "tryocaml"]
]
install: [
  ["mkdir" "-p" "%{_:share}%"]
  ["cp" "-r" "www/*" "%{_:share}%"]
]
synopsis: "Tryocaml, online client-side OCaml toplevel with editor"
description: """
Based on repurposed parts from learn-ocaml.
"""
